--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
+    "@ngxs/store": "^3.7.0",
+    "firebase": "^7.13.1",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.1",
-    "firebase": "^7.13.1"
+    "zone.js": "~0.11.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.7",
